<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mbno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/mobile"
        android:inputType="number"
        android:text="@string/_91"
        android:textSize="25sp"
        android:autofillHints="phone" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:hint="@string/special_code"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/otp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="155dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lavender_border"
        android:text="@string/getotp"
        android:textSize="20sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:hint="@string/otp"
        android:textSize="25sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/lavender_border"
        android:text="@string/signup_login"
        android:textSize="20sp"/>
</LinearLayout>