<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/abg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ambulance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/lavender_border"
        android:gravity="center"
        android:text="@string/ambluanbe"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/fire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/lavender_border"
        android:gravity="center"
        android:text="@string/apf"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/police"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/lavender_border"
        android:gravity="center"
        android:text="@string/police"
        android:textColor="#000000"
        android:textSize="25sp" />

</RelativeLayout>